--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
  <title>Document</title>
 </head>
 <body>
-<h1>hello world</h1>
+ <div class="container">
+   <div class="box1"></div>
+   <div class="box1"></div>
+   <div class="box1"></div>
+   <div class="box1"></div>
+   <div class="box1"></div>
+   <div class="box1"></div>
+   <div class="box1"></div>
+   <div class="box1"></div>
+   <div class="box1"></div>
+ </div>
+ <button class="btn">RESTART</button>
+ <div class="history">
+
+ </div>
 </body>
 <script src="./main.js"></script>
 </html>
